# compound-status

./: .gitignore  README.md  compound_status.py  lib_template.jinja  metadata.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yaml
scripts/: init.sh  inline-lib.py  publish.sh
src/: charm.py
test/integration/: test_status_int.py
test/integration/tester/: .gitignore  config.yaml  metadata.yaml  requirements.txt
test/integration/tester/src/: charm.py
test/unit/: harnessctx.py  test_status.py
