[metadata]
name = compound_status
version = 0.1
author = Pietro Pasotti
author_email = pietro.pasotti@canonical.com
description = A library to manage complex charm status.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = status, charm
license = Apache License, Version 2.0
classifiers =
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3


[options]
packages = find:
install_requires =
    ops>=1.5.0

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1
    isort==5.10.1
    pytest==7.1.2
